
plugins {
	id 'java'
}

sourceCompatibility = 1.8
targetCompatibility = 1.8

jar {
	manifest {
		attributes(
			'Main-Class': 'osgi2gradle.Main'
		)
	}
}
